test02.html edited

--- a/test02.html
+++ b/test02.html
@@ -8,5 +8,10 @@
 </head>
 <body>
     <h1>test02 예제입니다.</h1>
+    <ul>
+        <li>윤혜림</li>
+        <li>아이유</li>
+        <li>온유</li>
+    </ul>
 </body>
 </html>
